--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -4,7 +4,7 @@
 
     <div class="main custom-login">
 
-      <h3 style="text-align: center;">Please Log In, or <a routerLink="/register">Sign Up</a></h3>
+      <h3 style="text-align: center;">Register with us!</h3>
       <a href="#" class="btn btn-lg btn-danger btn-block btn-labeled"><span class="btn-label"><i class="fa fa-google-plus"></i></span></a>
       <div class="login-or">
         <hr class="hr-or">
@@ -17,18 +17,22 @@
           <input type="email" class="form-control" id="inputUsernameEmail" required>
         </div>
         <div class="form-group">
-          <a class="pull-right" href="#">Forgot password?</a>
           <label for="inputPassword">Password</label>
           <input type="password" class="form-control" id="inputPassword" required>
         </div>
-        <div class="checkbox pull-right">
-          <label>
-            <input type="checkbox">
-            Remember me </label>
+        <div class="form-group">
+          <label for="inputPassword">Re-type Password</label>
+          <input type="password" class="form-control" id="inputPassword" required>
         </div>
+       
         <button type="submit" class="btn btn btn-primary">
-          Log In
+          Register
         </button>
+
+         <div class="form-group">
+          <a routerLink="/">Already have an account?</a>
+        </div>
+
       </form>
 
     </div>
