home page with static memories, added moment js library for posted date

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -26,7 +26,7 @@
             <input type="checkbox">
             Remember me </label>
         </div>
-        <button type="submit" class="btn btn btn-primary">
+        <button type="submit" class="btn btn btn-primary" routerLink="app/dashboard">
           Log In
         </button>
       </form>
