--- a/src/assets/css/material-dashboard.css
+++ b/src/assets/css/material-dashboard.css
@@ -3440,7 +3440,7 @@ fieldset[disabled] .form-group.is-focused .togglebutton label {
   background-color: #3f51b5;
 }
 .navbar.navbar-transparent {
-  background-color: transparent;
+  /*background-color: transparent;*/
   box-shadow: none;
   border-bottom: 0;
 }
