--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,6 @@
 <div class="col-md-12 material-card m-c-card-1" *ngFor="let memory of memories">
-    <span title="{{memory.posted_date}}" style="margin-top: 25px;" class="pull-right">{{memory.posted_date | amTimeAgo}}</span>
+    <span title="{{memory.posted_date}}" style="margin-top: 25px;"
+          class="pull-right">{{memory.posted_date | amTimeAgo}}</span>
     <p class="pull-right">
         <i class="material-icons" style="margin-top: 22px; margin-right: 10px">update</i>
     </p>
@@ -18,5 +19,20 @@
 
     <div class="placeholder-test-image"></div>
     <hr/>
-    <p class="pull-right"><i class="material-icons" style="margin-right: 5px">comment</i><span style="float:right">{{memory.total_comment}}</span></p>
+    <p class="pull-right"><i class="material-icons" (click)="toggleComment(memory)"
+                             style="margin-right: 5px">comment</i><span
+            style="float:right">{{memory.total_comment}}</span></p>
+
+    <div  style="max-height: 330px; overflow: auto;" [hidden]="!memory.showComment">
+        <div *ngFor="let comment of memory.comments" class="col-md-12" style="margin-bottom: 15px;">
+            <div class="col-md-1" style="text-align: center">
+                <img src="assets/img/new_logo.png" class="img" width="60px" height="60px"/>
+            </div>
+            <div class="col-md-10">
+                <h4>Sha</h4>
+                {{comment.comment}}
+            </div>
+        </div>
+    </div>
+
 </div>
