--- a/src/assets/css/material-dashboard.css
+++ b/src/assets/css/material-dashboard.css
@@ -5508,3 +5508,138 @@ footer .btn {
   }
 }
 
+ .placeholder-test-image {
+   background-color: darkgrey;
+   height: 450px;
+ }
+
+ .placeholder-test-each-memory-image {
+   background-color: darkgrey;
+   height: 350px;
+   margin-bottom: 30px;
+ }
+
+ .placeholder-test-each-memory-image-individual {
+     background-color: darkgrey;
+     min-height: 600px;
+     margin: 30px;
+ }
+
+ .material-card {
+     background: #fff;
+     border-radius: 2px;
+     /*height: 700px;*/
+     margin: 1rem;
+     margin-bottom: 20px;
+     padding: 3px 20px 35px 20px;
+ }
+
+ .m-c-card-1 {
+     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+ }
+
+ .m-c-card-1:hover {
+     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+ }
+
+ .spinner {
+     -webkit-animation: rotator 1.4s linear infinite;
+     animation: rotator 1.4s linear infinite;
+ }
+
+ @-webkit-keyframes rotator {
+     0% {
+         -webkit-transform: rotate(0deg);
+         transform: rotate(0deg);
+     }
+     100% {
+         -webkit-transform: rotate(270deg);
+         transform: rotate(270deg);
+     }
+ }
+
+ @keyframes rotator {
+     0% {
+         -webkit-transform: rotate(0deg);
+         transform: rotate(0deg);
+     }
+     100% {
+         -webkit-transform: rotate(270deg);
+         transform: rotate(270deg);
+     }
+ }
+ .path {
+     stroke-dasharray: 187;
+     stroke-dashoffset: 0;
+     -webkit-transform-origin: center;
+     transform-origin: center;
+     -webkit-animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
+     animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
+ }
+
+ @-webkit-keyframes colors {
+     0% {
+         stroke: #4285F4;
+     }
+     25% {
+         stroke: #DE3E35;
+     }
+     50% {
+         stroke: #F7C223;
+     }
+     75% {
+         stroke: #1B9A59;
+     }
+     100% {
+         stroke: #4285F4;
+     }
+ }
+
+ @keyframes colors {
+     0% {
+         stroke: #4285F4;
+     }
+     25% {
+         stroke: #DE3E35;
+     }
+     50% {
+         stroke: #F7C223;
+     }
+     75% {
+         stroke: #1B9A59;
+     }
+     100% {
+         stroke: #4285F4;
+     }
+ }
+ @-webkit-keyframes dash {
+     0% {
+         stroke-dashoffset: 187;
+     }
+     50% {
+         stroke-dashoffset: 46.75;
+         -webkit-transform: rotate(135deg);
+         transform: rotate(135deg);
+     }
+     100% {
+         stroke-dashoffset: 187;
+         -webkit-transform: rotate(450deg);
+         transform: rotate(450deg);
+     }
+ }
+ @keyframes dash {
+     0% {
+         stroke-dashoffset: 187;
+     }
+     50% {
+         stroke-dashoffset: 46.75;
+         -webkit-transform: rotate(135deg);
+         transform: rotate(135deg);
+     }
+     100% {
+         stroke-dashoffset: 187;
+         -webkit-transform: rotate(450deg);
+         transform: rotate(450deg);
+     }
+ }
