--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -29,6 +29,10 @@
         <button type="submit" class="btn btn btn-primary" routerLink="app/dashboard">
           Log In
         </button>
+
+        <div class="g-signin2" id="googleBtn"  (data-onsuccess)="onSignIn"></div>
+        <div id="logout" (click)="logout">Logout</div>
+        <pre>{{loggedIn | json}}</pre>
       </form>
 
     </div>
