--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,42 +1,77 @@
-<div class="container-fluid" >
-  <div class="row">
-<div class="col-md-12">
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-12">
 
-    <div class="main custom-login">
+            <div class="main custom-login">
 
-      <h3 style="text-align: center;">Register with us!</h3>
-      <a href="#" class="btn btn-lg btn-danger btn-block btn-labeled"><span class="btn-label"><i class="fa fa-google-plus"></i></span></a>
-      <div class="login-or">
-        <hr class="hr-or">
-        <span class="span-or">or</span>
-      </div>
+                <h3 style="text-align: center;">Register with us!</h3>
+                <!--<a href="#" class="btn btn-lg btn-danger btn-block btn-labeled"><span class="btn-label"><i class="fa fa-google-plus"></i></span></a>-->
+                <!--<div class="login-or">-->
+                <!--<hr class="hr-or">-->
+                <!--<span class="span-or">or</span>-->
+                <!--</div>-->
 
-      <form role="form">
-        <div class="form-group">
-          <label for="inputUsernameEmail">Email</label>
-          <input type="email" class="form-control" id="inputUsernameEmail" required>
+
+                <form role="form" #registerForm="ngForm" novalidate>
+                    <div class="form-group">
+                        <label>Name</label>
+                        <input type="text" class="form-control" [(ngModel)]="user.name" autocomplete="off" name="username" #name="ngModel"
+                               minlength="4" maxlength="24" required>
+                        <div *ngIf="name.errors && (name.dirty || name.touched)"
+                             class="text-danger">
+                            <div [hidden]="!name.errors.required">
+                                Name is required
+                            </div>
+                            <div [hidden]="!name.errors.minlength">
+                                Name must be at least 4 characters long.
+                            </div>
+                            <div [hidden]="!name.errors.maxlength">
+                                Name cannot be more than 24 characters long.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label>Email</label>
+                        <input type="email" class="form-control" [(ngModel)]="user.email" autocomplete="off"  name="email" #email="ngModel"
+                               pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$" required>
+                        <div class="text-danger" [hidden]="email.valid || email.untouched">
+                            <div *ngIf="email.errors && email.errors.required">
+                                Email is required
+                            </div>
+                            <div *ngIf="email.errors && email.errors.pattern">
+                                Email is invalid
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label>Password</label>
+                        <input type="password" class="form-control" [(ngModel)]="user.password" name="password" #password="ngModel"
+                               required >
+                        <div class="text-danger" [hidden]="password.valid || password.untouched">
+                            Password is required
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label>Re-type Password</label>
+                        <input type="password" class="form-control" [(ngModel)]="user.confirmPassword"
+                               name="confirmPassword" required validateEqual="password"  #confirmPassword="ngModel" reverse="false">
+                        <div class="text-danger" [hidden]="confirmPassword.valid || (confirmPassword.untouched)">
+                                Password mismatch
+                        </div>
+                    </div>
+
+                    <button type="submit" [disabled]="!registerForm.form.valid" class="btn btn btn-primary">
+                        Register
+                    </button>
+
+                    <div class="form-group">
+                        <a routerLink="/">Already have an account?</a>
+                    </div>
+
+                </form>
+
+            </div>
         </div>
-        <div class="form-group">
-          <label for="inputPassword">Password</label>
-          <input type="password" class="form-control" id="inputPassword" required>
-        </div>
-        <div class="form-group">
-          <label for="inputPassword">Re-type Password</label>
-          <input type="password" class="form-control" id="inputPassword" required>
-        </div>
-       
-        <button type="submit" class="btn btn btn-primary">
-          Register
-        </button>
-
-         <div class="form-group">
-          <a routerLink="/">Already have an account?</a>
-        </div>
-
-      </form>
 
     </div>
-    </div>
-
-  </div>
 </div>
