--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,42 +1,60 @@
-<div class="container-fluid" >
-  <div class="row">
-<div class="col-md-12">
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-12">
 
-    <div class="main custom-login">
+            <div class="main custom-login">
 
-      <h3 style="text-align: center;">Please Log In, or <a routerLink="/register">Sign Up</a></h3>
-      <a href="#" class="btn btn-lg btn-danger btn-block btn-labeled"><span class="btn-label"><i class="fa fa-google-plus"></i></span></a>
-      <div class="login-or">
-        <hr class="hr-or">
-        <span class="span-or">or</span>
-      </div>
+                <h3 style="text-align: center;">Please Log In, or <a routerLink="/register">Sign Up</a></h3>
+                <!--<a href="#" class="btn btn-lg btn-danger btn-block btn-labeled"><span class="btn-label"><i class="fa fa-google-plus"></i></span></a>-->
+                <!--<div class="login-or">-->
+                <!--<hr class="hr-or">-->
+                <!--<span class="span-or">or</span>-->
+                <!--</div>-->
 
-      <form role="form">
-        <div class="form-group">
-          <label for="inputUsernameEmail">Email</label>
-          <input type="email" class="form-control" id="inputUsernameEmail" required>
+                <form role="form" #loginForm="ngForm" novalidate>
+                    <div class="form-group">
+                        <label>Email</label>
+                        <input type="email" class="form-control" [(ngModel)]="user.email" autocomplete="off"
+                               name="email" #email="ngModel"
+                               pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$" required>
+                        <div class="text-danger" [hidden]="email.valid || email.untouched">
+                            <div *ngIf="email.errors && email.errors.required">
+                                Email is required
+                            </div>
+                            <div *ngIf="email.errors && email.errors.pattern">
+                                Email is invalid
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <a class="pull-right" href="#">Forgot password?</a>
+                        <label>Password</label>
+                        <input type="password" class="form-control" [(ngModel)]="user.password" name="password"
+                               #password="ngModel"
+                               required>
+                        <div class="text-danger" [hidden]="password.valid || password.untouched">
+                            Password is required
+                        </div>
+
+                    </div>
+                    <!--<div class="checkbox pull-right">-->
+                    <!--<label>-->
+                    <!--<input type="checkbox">-->
+                    <!--Remember me </label>-->
+                    <!--</div>-->
+                    <button type="submit" [disabled]="!loginForm.form.valid" class="btn btn btn-primary"
+                            routerLink="app/dashboard">
+                        Log In
+                    </button>
+
+                    <!--<div class="g-signin2" id="googleBtn"  (data-onsuccess)="onSignIn"></div>-->
+                    <!--<div id="logout">Logout</div>-->
+                    <!--<h5 (click)="update()">Click here to update loggedIn status</h5>-->
+
+                </form>
+
+            </div>
         </div>
-        <div class="form-group">
-          <a class="pull-right" href="#">Forgot password?</a>
-          <label for="inputPassword">Password</label>
-          <input type="password" class="form-control" id="inputPassword" required>
-        </div>
-        <div class="checkbox pull-right">
-          <label>
-            <input type="checkbox">
-            Remember me </label>
-        </div>
-        <button type="submit" class="btn btn btn-primary" routerLink="app/dashboard">
-          Log In
-        </button>
-
-        <div class="g-signin2" id="googleBtn"  (data-onsuccess)="onSignIn"></div>
-        <div id="logout" (click)="logout">Logout</div>
-        <pre>{{loggedIn | json}}</pre>
-      </form>
 
     </div>
-    </div>
-
-  </div>
 </div>
